--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@
 **/coverage.net5.0.xml
 /src/Tests/Coverage/coverage.xml
 /src/Tests/FlatSharpEndToEndTests/FlatSharpEndToEndTests.xml
+.DS_Store
+.idea
+
