--- a/src/FlatSharp/FlatSharp.csproj
+++ b/src/FlatSharp/FlatSharp.csproj
@@ -41,7 +41,14 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FlatSharp.Runtime\FlatSharp.Runtime.csproj" />
+    <ProjectReference Include="..\FlatSharp.Unity\FlatSharp.Unity.csproj" Condition=" '$(TargetFramework)' == 'netstandard2.1' " />
+    <ProjectReference Include="..\FlatSharp.Runtime.Unity\FlatSharp.Runtime.Unity.csproj" Condition=" '$(TargetFramework)' == 'netstandard2.1' " />
+    <ProjectReference Include="..\FlatSharp.Unity\FlatSharp.Unity.csproj" Condition=" '$(TargetFramework)' == 'net5.0' " />
+    <ProjectReference Include="..\FlatSharp.Runtime.Unity\FlatSharp.Runtime.Unity.csproj" Condition=" '$(TargetFramework)' == 'net5.0' " />
+    <ProjectReference Include="..\FlatSharp.Unity\FlatSharp.Unity.csproj" Condition=" '$(TargetFramework)' == 'net6.0' " />
+    <ProjectReference Include="..\FlatSharp.Runtime.Unity\FlatSharp.Runtime.Unity.csproj" Condition=" '$(TargetFramework)' == 'net6.0' " />
   </ItemGroup>
+  
   <ItemGroup>
     <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
   </ItemGroup>
