--- a/src/FlatSharp.Unity/FlatSharp.Unity.csproj
+++ b/src/FlatSharp.Unity/FlatSharp.Unity.csproj
@@ -4,6 +4,7 @@
         <Nullable>enable</Nullable>
         <LangVersion>10</LangVersion>
         <TargetFrameworks>net5.0;net6.0;netstandard2.1</TargetFrameworks>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
 
     <ItemGroup>
